16-diploma-yc/terraform/200_common_config/infrastructure/playbooks/templates/back-and-front/deploy-backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: default
  labels:
    app: web-news
    component: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-news
      component: backend
  template:
    metadata:
      labels:
        app: web-news
        component: backend
    spec:
      containers:
      - name: backend
        image: olezhuravlev/backend:1.0.0
        ports:
        - name: backend-port
          containerPort: 9000
          protocol: TCP
---
# NodePort: Exposes the Service on each Node's IP at a static port.
apiVersion: v1
kind: Service
metadata:
  name: backend-nodeport-svc
  namespace: default
  labels:
    app: web-news
    component: backend
spec:
  type: NodePort
  selector:
    app: web-news
    component: backend
  ports:
  - name: backend-nodeport
    protocol: TCP
    nodePort: 30001 # Port to apply from outside (to see ips - 'kubectl get nodes -o wide').
    port: 9000 # Port to apply from inside (to see ips - 'kubectl get svc').
    targetPort: backend-port # Port to map acces to (to see ips - 'kubectl get pods -o wide')
