16-diploma-yc/terraform/200_common_config/infrastructure/playbooks/templates/back-and-front/deploy-frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: default
  labels:
    app: web-news
    component: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-news
      component: frontend
  template:
    metadata:
      labels:
        app: web-news
        component: frontend
    spec:
      containers:
      - name: frontend
        image: olezhuravlev/frontend:1.0.2
        ports:
        - name: frontend-port
          containerPort: 80
          protocol: TCP
---
# NodePort: Exposes the Service on each Node's IP at a static port.
apiVersion: v1
kind: Service
metadata:
  name: frontend-nodeport-svc
  namespace: default
  labels:
    app: web-news
    component: frontend
spec:
  type: NodePort
  selector:
    app: web-news
    component: frontend
  ports:
  - name: frontend-nodeport
    protocol: TCP
    nodePort: 30000 # Port to apply from outside (to see ips - 'kubectl get nodes -o wide').
    port: 80 # Port to apply from inside (to see ips - 'kubectl get svc').
    targetPort: frontend-port # Port to map acces to (to see ips - 'kubectl get pods -o wide')
