16-diploma-yc/terraform/200_common_config/infrastructure/playbooks/templates/back-and-front/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
  namespace: default
  labels:
    app: web-news
    component: frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-nodeport-svc
              port:
                number: 30000
